assets/components/search.css
.search {
  margin: 1.5rem;
}

.search-bar {
  display: flex;
  height: 100%;
}

.location {
  background-color: var(--clr-grey);
  padding: 1rem 1.2rem;
  border-radius: 1rem 0 0 1rem;
}

.magnifying-glass {
  z-index: 2;
  border-radius: 1rem;
  background-color: var(--clr-accent);
  color: white;
  padding: 1rem;
  cursor: pointer;
}

.secret-search {
  left: 18rem;
  background-color: var(--clr-accent);
  color: white;
  font-weight: bold;
  border: none;
  border-radius: 0 1rem 1rem 0;
  padding: 1rem;
  font-family: "Raleway", "Sans serif";
  font-size: 1rem;
  cursor: pointer;
  margin: 0;
}

.search-input {
  border-top: 1px solid var(--clr-grey);
  border-bottom: 1px solid var(--clr-grey);
  border-left: none;
  border-right: none;
  padding: 0 0 0 1rem;
  font-weight: 600;
  font-size: 1em;
  margin: 0;
}

.fa-map-marker-alt,
.secret-search {
  font-weight: 600;
}

.search-input[type="text"] {
  -webkit-appearance: none;
  border-radius: 0;
}

.search-input::placeholder {
  color: black;
}

@media screen and (min-width: 641px) {
  .search {
    margin: 2.5rem;
    margin-top: 0;
  }
  .magnifying-glass {
    display: none;
  }
}

@media screen and (max-width: 640px) {
  .secret-search {
    display: none;
  }

  .search-input {
    flex-grow: 1;
    margin-right: -1em;
  }
}

.search-description {
  margin: 0.75rem 0 1.5rem 0;
}

.fa-search {
  text-align: center;
}

/* RESPONSIVE FILTERS */
@media screen and (min-width: 993px) {
  .search-bar {
    margin-bottom: 1rem;
  }
}

@media screen and (max-width: 992px) {
  .search-bar {
    margin-bottom: 2rem;
  }
}

